refactor: refactored health unit module and separated responsibilities